musical entity fix